--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "precommit": "npm run lint && npm run sass:lint",
     "prepush": "npm run test"
   },
-
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -44,6 +43,5 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
