--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "project-scaffoldings",
+  "name": "nickname",
   "version": "1.0.0",
-  "description": "",
+  "description": "Nickname",
   "main": "main.js",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack/webpack.dev.js --mode=development --host localhost --port 8080",
@@ -18,10 +18,6 @@
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/front-camp-2018/project-scaffoldings/issues"
-  },
-  "homepage": "https://github.com/front-camp-2018/project-scaffoldings#readme",
   "devDependencies": {
     "css-loader": "^1.0.0",
     "eslint": "^5.6.1",
@@ -43,7 +39,8 @@
     "stylelint-config-standard": "^18.2.0",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9"
+    "webpack-dev-server": "^3.1.9",
+    "serviceworker-webpack-plugin": "^1.0.1"
   },
   "dependencies": {},
   "jest": {
